# rust-opentelemetry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-prod  docker-compose.yaml  lcov.info
.devcontainer/: devcontainer.json
.github/: codecov.yml  readme
.github/workflows/: ci.yml
db/migrations/: 20240517023437_person.sql
k8s/: deployment.yaml  ingress.old  service.yaml
migration/: Cargo.toml
opentelemetry/jaeger/: jaeger.yaml  readme.txt
opentelemetry/otel-jaeger/: open-telemetry-collector-jaeger.yaml
opentelemetry/otel-sidecar/: opentelemetry-operator.yaml  otel-sidecar.yaml
queries/: find_person.sql
src/: main.rs
src/infra/: list_post.rs  mod.rs  mutation.rs  query.rs  tracer.rs  tracer_23.rs
